<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/homeButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/home_filter" />

        <RadioButton
            android:id="@+id/workButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/work_filter" />

        <RadioButton
            android:id="@+id/schoolButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/school_filter" />

        <RadioButton
            android:id="@+id/errandsButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/errands_filter" />

        <RadioButton
            android:id="@+id/otherButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_filter" />
    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>
